second commit added

--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
 </head>
 <body>
     <header>
-
+  
     </header>
     <main>
-
+        <section>
+           
+        </section>
+    <section class="container mx auto lg:m-12">
+        <div>
+            <input type="text" placeholder="Search here" class="input input-bordered input-info w-full max-w-xs" />
+            <button onclick="buttonHandler()" class="btn btn-active btn-accent">Search</button>
+        </div>
+        <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-11 mt-10">
+           
+        </div>
+    </section>
     </main>
     <footer>
 
     </footer>  
+    <script src="js/phone.js"></script>
 </body>
 </html>
