second step added

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
         </section>
     <section class="container mx auto lg:m-12">
         <div>
-            <input type="text" placeholder="Search here" class="input input-bordered input-info w-full max-w-xs" />
+            <input id="input-field" type="text" placeholder="Search here" class="input input-bordered input-info w-full max-w-xs" />
             <button onclick="buttonHandler()" class="btn btn-active btn-accent">Search</button>
         </div>
         <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-11 mt-10">
            
         </div>
+        <div id="show-all-container" class="hidden mt-10">
+            <button class="btn btn-active btn-secondary  text-center ">See More</button>
+        </div>
     </section>
+    
     </main>
     <footer>
 
